test/files/neg/bug421.check
bug421.scala:4 error: regular expressions not yet implemented
  Bar("foo","meets","bar") match {
     ^
one error found
